--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "meilisearch": "^0.25.1",
         "mini-svg-data-uri": "^1.4.4",
         "react": "^18.1.0",
+        "react-day-picker": "^8.0.7",
         "react-dom": "^18.1.0",
         "react-final-form": "^6.5.9",
         "react-router-dom": "^6.3.0",
@@ -46,7 +47,7 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.3",
         "typescript": "^4.7.4",
-        "vite": "3.0.0-beta.1",
+        "vite": "3.0.0-beta.5",
         "vite-plugin-pwa": "^0.12.0",
         "vite-plugin-svg-icons": "^2.0.1"
     },
