--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "date-fns": "^2.28.0",
         "file-saver": "^2.0.5",
         "final-form": "^4.20.7",
+        "final-form-arrays": "^3.0.2",
         "framer-motion": "^6.3.11",
         "lottie-web": "^5.9.4",
         "meilisearch": "^0.25.1",
@@ -24,7 +25,9 @@
         "react-day-picker": "^8.0.7",
         "react-dom": "^18.1.0",
         "react-final-form": "^6.5.9",
+        "react-final-form-arrays": "^3.1.3",
         "react-router-dom": "^6.3.0",
+        "react-simple-timefield": "^3.2.5",
         "react-toastify": "^9.0.3",
         "recoil": "^0.7.3",
         "swr": "^1.3.0",
